# actrax_demon

./: .clang-format  .clang-tidy  .gitignore  ATTRIBUTION.md  BUILD.md  CMakeLists.txt  LICENSE-GPL  README.md  actrax_demon.sln  makefile  resources_debug.rc  zip-hash.cmake
cmake/toolchains/: mingw.cmake
core/: CMakeLists.txt
core/Injector/: CMakeLists.txt  README.md
core/Injector/include/: loadLibrary.hpp
core/Injector/src/: loadLibrary.cpp
core/Integrity/: CMakeLists.txt  README.md
core/Integrity/include/: AntiAnalysis.hpp  StringEncryptionUtils.hpp
core/Integrity/src/: AntiAnalysis.cpp
core/Logger/: CMakeLists.txt  LICENSE-MIT  README.md
core/Logger/include/: Logger.hpp
core/RegistryGuard/: CMakeLists.txt  README.md  TODO.md
core/RegistryGuard/include/: RegistryGuard.hpp
core/RegistryGuard/src/: RegistryGuard.cpp
core/RegistryHelper/: CMakeLists.txt  README.md
core/RegistryHelper/include/: RegistryError.hpp  RegistryHelper.hpp
core/RegistryHelper/src/: RegistryHelper.cpp
core/Server/: CMakeLists.txt
core/Server/include/: Client.hpp  Helper.hpp  Server.hpp  SessionToken.hpp  Tasks.hpp
core/Server/src/: Connect.cpp  Session.cpp
core/TaskScheduler/: CMakeLists.txt  LICENSE-MIT  README.md
core/TaskScheduler/include/: TaskScheduler.hpp
core/TaskScheduler/src/: TaskScheduler.cpp
demon/: demon.vcxproj  demon.vcxproj.filters  main.cpp  systemManager.ixx  utility.ixx
injector/: README.md  cpp.hint  framework.h  injector.cpp  injector.hpp  injector.vcxproj  injector.vcxproj.filters  pch.h
integrity/: README.md  antiAnalysis.hpp  framework.h  integrity.cpp  integrity.vcxproj  integrity.vcxproj.filters  pch.h  stringEncryptionUtils.hpp
logger/: LICENSE-MIT  README.md  framework.h  logger.hpp  logger.vcxproj  logger.vcxproj.filters  pch.h
registry/: framework.h  registry.cpp  registry.vcxproj  registry.vcxproj.filters  registryError.hpp  registryGuard.cpp  registryGuard.hpp  registryHelper.cpp  registryHelper.hpp
src/: TODO.md  main.cpp
src/modules/: README.md
src/modules/ApplicationController/: ApplicationController.cpp  ApplicationController.hpp
src/modules/RegistryManager/: RegistryManager.cpp  RegistryManager.hpp
src/modules/System/: SystemInfo.cpp  SystemInfo.hpp  SystemManager.cpp  SystemManager.hpp
src/modules/Utility/: Utility.cpp  Utility.hpp
